--- a/joe.html
+++ b/joe.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -158,7 +158,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="akw4aSXtfty95vT0ppwvK1uLRRRWg1FohR0UzXEEJo8ECUqNkzYP94noRe8HOzEjKoLV9SYtLr4xo7oj77fyJZXpLN3nex+9/5IBNgoRYaK6fYbc5D9mPquhUge/6WCS">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="caGLwpbmOf+fAXXLc3jkIYdoX4zNFY2N2Q/WKJpv2GcaQDfJ7NNj6hRicDUDWPuzuCIag4iVN5wwli3w/J9U7oYyjfvvzWQex+6ah+Rfv/0EpyWN4NIOeiN2BkDyQsdj">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
