--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Barrett Insurance comprehensively protects your dreams. We offer various lines of coverage including life, health, commercial, farm, auto & homeowners insurance. ">
   
   
-  <title>Barrett Insurance Agency | Jonesville, MI</title>
+  <title>Barrett Insurance | Jonesville, MI</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -83,7 +83,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="mbr-section content5 cid-rjLHi5lPOL" id="content5-7w">
+<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="mbr-section content5 cid-rjLHi5lPOL" id="content5-7w">
 
     
 
@@ -326,7 +326,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thank you for subscribing to our newsletter!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="LZbjAlIuq0yrekcvfGeOAsEAX7BfOy9fAtA2XXmEkUG+4ZPGjE4h7F57BIlo/gR5BkhzFAOrs3xp5P5P+uiJzef2KOwAqs1KhqPi6Ahblnnl0Y2R45Dl+84J43KofGvH">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="JEo8+JZVeC7UOTY9aYw4PGv+PjOJGrfjILQ5OrfbGbIG4m4K2JlzrwkXVmYS9BvhhEZbmbEdVlNukA8AszOALaEBh06uOWn+YClpt+jgLdKqAKnH7OJf2SQWn3itTQsn">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-6y">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Subscribe</button></span>
