--- a/cyndi.html
+++ b/cyndi.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a website</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -158,7 +158,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="HvG9WhCqehG5CSzVECuvag7LGmDOKGLSpqhaYRwhTLckByQzjZMk6bRsRluhqeu3fGUFui7foPHjYWWkt8tpH0vg92RW7d/LyptX9lgIrFDtlTrxveoAgDDxeiVDPhkg">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="bpD257ZR/S3CRmLu0rzVfyUsbNy0NFmwS/odQwW9y12VbNMXkenUE5LM22AcjYvtb/Bb+vvgFW5raP9dTQU7F98eHYJiOTN2ecv+f7exwOfWxGMo9p+dqrtTp6oPsXgg">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
