--- a/products.html
+++ b/products.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create your own web page for free</a></section><section class="mbr-section content5 cid-r6QfwbDyCS" id="content5-49">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="mbr-section content5 cid-r6QfwbDyCS" id="content5-49">
 
     
 
@@ -340,7 +340,7 @@
                     <div class="media-container-row">
                         <div class="col-md-12">
                             <div class="wrap-img ">
-                                <a href="https://michigan.aaa.com/"><img src="assets/images/untitled-78x47.png" class="img-responsive clients-img" alt="" title=""></a>
+                                <a href="https://michigan.aaa.com/"><img src="assets/images/aaa-404x242.png" class="img-responsive clients-img" alt="" title=""></a>
                             </div>
                         </div>
                     </div>
