--- a/Daniel.html
+++ b/Daniel.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -158,7 +158,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xuy/xgTBHha8nBMbhcexGM9A5AoZ5m5zE3yzVOs/tlmwHjlZuabOb26C/Y2Oogto7L+fdxTPW1UX3ASUOTqVbVVUQnTcYCEBFMKKM/rXedijAX+LrUoh32U6cHNcRAsk">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="y9gI+wD082/wa38z+s22e8zbWn8kXj5TXuk92w41t6o6p26Bn+osX85py09ZapkRYdYaxbwxSQeG8RNvev9ilmp6mFOT4DJMIotYFu1UGCrTvQCOFjxGhY4Jeb97dWLv">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
