--- a/becky.html
+++ b/becky.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="mbr-section content5 cid-r6Qg4II7iO" id="content5-4p">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-r6Qg4II7iO" id="content5-4p">
 
     
 
@@ -158,7 +158,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="kzul1vgw1dpW28yZ0TnXugr2wWQjprOJ+Agyas0ScLboOd+aT8UxUuV3zBE2Pas/8v44Jahc8sK41EaSqvrvRAEkqDM2Vw83rIqNchN6koe3541xCKIYnOrkzHCyl7Ih">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="XCfoJBbimKVX5mpxWsLFqIJcO6Zd6qQGQWY0Foqj1xtN9tIOyVBKqIuDDLMPKQQI62uYD8C/eecfHBsvqyyoPqc0OEujokTkRs4RPFC+psyhpASTBJcdeDpR+O1P6ZNv">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
