create github pages

--- a/Daniel.html
+++ b/Daniel.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/e">make your own website</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -158,7 +158,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="CZAEb2/FvTqcrKHCHWB251JSp0VJOL5fP2ZgDZ5nlm+bz0axVzj/F0j+Swl4X67h5zBJcswrKN3PWzFtlal8Sj0bek9e1xEwhcY59Jm0CvIsnWXOIhMJbgC3cx2dP0/7">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Gyfjb7z7CCjX5+M/PW5JsOxJGr4/r9eOXiTOiJ/IVkCYY2B3icmMtAmQZzpfSXyABWr5p3609DPUS0m3aEclNoz98MJ7i2nLdsaDAhPn34EQ30alkjuxGCPwFcPEzmxW">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -201,7 +201,7 @@
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright 2023 - Barrett Insurance - All Rights Reserved
+                    © Copyright 2024 - Barrett Insurance - All Rights Reserved
                 </p>
             </div>
         </div>
